# sandman-ai-sandbox

./: .gitignore  Makefile  PERMISSIONS.md  README.md  SECURITY.md  codebase.md  pyproject.toml
configs/: .env.example
docs/: implementation.md
src/cli/: app.py  entry.py  model_browser.py  settings_menu.py  tui.py  ui.py
src/core/: graph.py  output.py  prompt.py  retry.py  state.py
src/infrastructure/: config.py  models.py
src/infrastructure/docker/: executor.py  manager.py  stream_executor.py
src/infrastructure/mcp/: server.py
src/infrastructure/mcp/tools/: env_manager.py  file_explorer.py  files.py  git_tools.py  image_selector.py  linter.py  polyglot_runner.py  runner.py  sandbox.py  time_budget.py  venv_manager.py  workspace_manager.py
src/utils/: errors.py  logging.py  validation.py
tests/: conftest.py
tests/cli/: test_ui.py
tests/core/: test_graph_nodes.py  test_output.py  test_retry.py
tests/infrastructure/: test_config.py  test_models.py
tests/infrastructure/docker/: test_executor.py  test_manager.py
tests/infrastructure/mcp/tools/: test_files.py
tests/utils/: test_errors.py  test_logging.py  test_validation.py
