[project]
name = "sandman"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.1.0",
    "langchain-mcp-adapters>=0.0.5",
    "mcp>=1.0.0",
    "docker>=7.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=8.0.0",
    "langchain-ollama>=0.1.0",
    "langchain-openai>=0.1.0",
    "requests>=2.31.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "responses>=0.25.0",
    "aioresponses>=0.7.6",
    "rich>=13.7.0",
    "questionary>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.scripts]
sandman = "src.cli.entry:cli_entry"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
